--- a/site/web/app/themes/sage/assets/styles/layouts/_posts.scss
+++ b/site/web/app/themes/sage/assets/styles/layouts/_posts.scss
@@ -9,7 +9,7 @@ section.blog-post-row {
   clear: both;
   display: block;
   float: left;
-  margin: 30px;
+  margin: 15px 45px;
   margin-top: 45px;
   width: 100%;
 }
